<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/f_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passport_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/f_authority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authority" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_title_date_of_creation" />

        <TextView
            android:id="@+id/txt_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/empty" />

        <Button
            android:id="@+id/btn_select_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_select" />
    </LinearLayout>
</LinearLayout>